dataset1235/2025-2/1153765216/users/474281434/executions/2814675586_1026882843.log
== SUBMISSION (2025-08-26 19:08:36)
-- CODE: 
raio = float(input())
area = raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0025
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
10.24
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
12.25
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
144.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
70.56
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
110.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:08:32)
-- CODE: 
raio = float(input())
area = raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0025
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
10.24
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
12.25
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
144.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
70.56
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
110.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:03:32)
-- CODE: 
raio = float(input())
area = pi * raio**2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio**2
           ^^
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:08:35)
-- CODE: 
raio = float(input())
area = raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0025
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
10.24
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
12.25
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
144.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
70.56
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
110.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:07:37)
-- CODE: 
raio = float(input())
area = raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
---- user output:
0.0025
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
---- user output:
10.24
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
---- user output:
12.25
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
---- user output:
144.0
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
---- user output:
70.56
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
---- user output:
110.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:17:46)
-- CODE: 
raio = float(input())
area = pi * raio ** 2
print(round(area,4))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.05
---- correct output:
0.0079
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 2:
---- input:
3.2
---- correct output:
32.1699
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 3:
---- input:
3.5
---- correct output:
38.4845
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 4:
---- input:
12.0
---- correct output:
452.3893
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 5:
---- input:
8.4
---- correct output:
221.6708
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- TEST CASE 6:
---- input:
10.5
---- correct output:
346.3606
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = pi * raio ** 2
           ^^
NameError: name 'pi' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
